[package]
name = "nested-modules"
description = "Building blocks for nested module systems"
repository = "https://github.com/01mf02/nested-modules"
version = "0.1.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nested_modules"
path = "src/lib.rs"

[dependencies]
